Fix broken layout grid on Public Collections
When a collection title was longer than others on it's row (2 lines vs
1, or 3 vs 2) then the grid layout breaks up

[#164832303]

--- a/src/components/collection/card/CollectionCard.less
+++ b/src/components/collection/card/CollectionCard.less
@@ -23,6 +23,15 @@
 
   .collection-title {
     margin-bottom: 0px;
+
+    &.clamp-2-lines {
+      max-height: 48px;
+      text-overflow: ellipsis;
+      overflow: hidden;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
+      display: -webkit-box;
+    }
   }
 
   .view-collection {
